# flower

./: .gitignore  BUILD.bazel  Dockerfile  LICENSE  Makefile  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  main.go
.github/workflows/: coverage.yml  main.yml  release.yml  slsa3.yml
act/: event.json
data/: simple.sql
example/: full.md
pkg/cmd/: BUILD.bazel  parse.go  root.go
pkg/global/: BUILD.bazel  global.go  regexp.go  utils.go  utils_test.go
pkg/graph/: BUILD.bazel  dfs.go  dfs_test.go  distance.go  distance_test.go  gen.go  gen_test.go  optimise.go
pkg/log/: BUILD.bazel  log.go  log_test.go
pkg/model/: BUILD.bazel  distance.go  model.go
pkg/reader/: BUILD.bazel  reader.go  reader_test.go
pkg/utils/: BUILD.bazel  array.go  numbers.go
pkg/writer/: BUILD.bazel  writer.go  writer_test.go
