load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/epsxy/flower
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

go_library(
    name = "flower_lib",
    srcs = ["main.go"],
    embedsrcs = ["VERSION"],
    importpath = "github.com/epsxy/flower",
    visibility = ["//visibility:private"],
    deps = ["//pkg/cmd"],
)

go_binary(
    name = "flower",
    embed = [":flower_lib"],
    visibility = ["//visibility:public"],
)
