load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "parse.go",
        "root.go",
    ],
    importpath = "github.com/epsxy/flower/pkg/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/global",
        "//pkg/log",
        "//pkg/model",
        "//pkg/reader",
        "//pkg/writer",
        "@com_github_spf13_cobra//:cobra",
    ],
)
