load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "global",
    srcs = [
        "global.go",
        "regexp.go",
        "utils.go",
    ],
    importpath = "github.com/epsxy/flower/pkg/global",
    visibility = ["//visibility:public"],
    deps = ["@com_github_lmittmann_tint//:tint"],
)

go_test(
    name = "global_test",
    srcs = ["utils_test.go"],
    embed = [":global"],
    deps = ["@com_github_stretchr_testify//require"],
)
