load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "graph",
    srcs = [
        "dfs.go",
        "distance.go",
    ],
    importpath = "github.com/epsxy/flower/pkg/graph",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/model",
        "//pkg/utils",
        "@com_github_texttheater_golang_levenshtein_levenshtein//:go_default_library",
        "@in_gopkg_vmarkovtsev_go_lcss_v1//:go-lcss_v1",
    ],
)
