load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "graph",
    srcs = [
        "dfs.go",
        "distance.go",
        "gen.go",
    ],
    importpath = "github.com/epsxy/flower/pkg/graph",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/global",
        "//pkg/model",
        "//pkg/utils",
        "@com_github_texttheater_golang_levenshtein_levenshtein//:levenshtein",
        "@in_gopkg_vmarkovtsev_go_lcss_v1//:go-lcss_v1",
    ],
)

go_test(
    name = "graph_test",
    srcs = [
        "dfs_test.go",
        "distance_test.go",
        "gen_test.go",
    ],
    embed = [":graph"],
    deps = [
        "//pkg/model",
        "//pkg/utils",
        "@com_github_stretchr_testify//require",
    ],
)
