load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "writer",
    srcs = ["writer.go"],
    importpath = "github.com/epsxy/flower/pkg/writer",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/global",
        "//pkg/graph",
        "//pkg/model",
    ],
)

go_test(
    name = "writer_test",
    srcs = ["writer_test.go"],
    embed = [":writer"],
    deps = [
        "//pkg/global",
        "//pkg/model",
        "@com_github_stretchr_testify//require",
    ],
)
